Show error message for finish attempts

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2195,7 +2195,7 @@
 
     <!-- 27. Products -->
     <!-- Errors -->
-    <string name="err_loading_products" formatted="false">Не удалось загрузить товары</string>
+    <string name="err_loading_products" formatted="false">Не удалось загрузить товары, попробуйте попозже...</string>
 
     <!-- 27. Products -->
     <!-- Errors -->
