--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1523,6 +1523,15 @@
 
     <!-- 20. Settings -->
     <!-- General -->
+    <string name="pref_font_scale" formatted="false">Font size</string>
+
+    <string name="pref_font_scale_0" formatted="false">Small</string>
+    <string name="pref_font_scale_1" formatted="false">Normal</string>
+    <string name="pref_font_scale_2" formatted="false">Large</string>
+    <string name="pref_font_scale_3" formatted="false">Huge</string>
+
+    <!-- 20. Settings -->
+    <!-- General -->
     <string name="pref_title_theme_light" formatted="false">Light</string>
 
     <!-- 20. Settings -->
